3/3/14 migrate ph-scale.SubSupText to scenery-phet
3/3/14 position superscripts relative to cap line in SubSupText
3/3/14 generalize ph-scale.ZoomButton and migrate to scenery-phet
3/3/14 add this.mutate(options) to ZoomButton
3/3/14 make major ticks 50% longer on log scale
# 1.0.0-dev.15 2/27/14
2/28/14 reimplement 'H3O/OH ratio' check box label to use SubSupText and include color-coding
2/28/14 fix: H2O value is displaying at '55.0', should be '55'
2/28/14 use SubSupText for '10^E' ticks on log graph, remove 'no mantissa' support from ScientificNotationNode
2/28/14 eliminate unnecessary string-number conversions in ScientificNotationNode
2/28/14 first pass at parsing HTML in SubSupText node, and creating scene graph based exclusively on scenery.Text
2/28/14 fix pointer areas for interactive graph indicators
2/28/14 replace HTMLText with ScientificNotationNode, efficient node for rendering numbers in scientific notation (M x 10^E)
# 1.0.0-dev.14 2/27/14
2/27/14 expand pointer areas (touch and mouse) for pH picker
2/27/14 rename 'Solutions' -> 'Micro' throughout (code, images, file names, directory structure)
2/27/14 rename 'Basics' -> 'Macro' throughout (code, images, file names, directory structure)
2/27/14 add 'off scale' to strings file
2/27/14 increase y-spacing in pH meter, so that picker isn't so close to expand/collapse button
2/27/14 restrict size of 'off scale' label for i18n, so that the label fits inside the arrow
2/27/14 remove option to have linear scale with no arrow at the top, decided to always show the arrow
2/27/14 make zoom buttons a bit larger, increase horizontal space between them, make linear scale a bit shorter to avoid crowding buttons
2/27/14 change top margin to 15 for 'Micro' and 'Custom' screens
2/27/14 disable icon in zoom button when the button is disabled
2/27/14 touch area for expand/collapse button in pH meter
2/27/14 make 'off screen' label slightly larger
2/27/14 refine options for SubSupText